--- a/web/css/post.css
+++ b/web/css/post.css
@@ -398,3 +398,45 @@ footer p {
     border-radius: 10px;     
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
+
+.modal {
+    display: none; /* Скрыть по умолчанию */
+    position: fixed; /* Зафиксированное позиционирование */
+    z-index: 1000; /* Отображать поверх других элементов */
+    left: 0;
+    top: 0;
+    width: 100%; /* Полная ширина */
+    height: 100%; /* Полная высота */
+    overflow: auto; /* Включить прокрутку при необходимости */
+    background-color: rgb(0,0,0); /* Цвет фона */
+    background-color: rgba(0,0,0,0.4); /* Полупрозрачный фон */
+}
+
+.modal-content {
+    background-color: #fefefe; /* Цвет фона содержимого модала */
+    margin: 15% auto; /* Центрировать содержимое */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Ширина модала */
+}
+
+.close {
+    color: #aaa; /* Цвет кнопки закрытия */
+    float: right; /* Поместить в правый верхний угол */
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black; /* Изменить цвет при наведении */
+    text-decoration: none;
+    cursor: pointer;
+}
+
+textarea {
+    resize: none; /* Запретить изменение размера */
+    width: 100%; /* Ширина 100% для адаптивности */
+    box-sizing: border-box; /* Учитывать границы и отступы в ширине */
+}
+
